--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,11 @@
 before_install:
-  - ./ci asdf install
+  - |
+    git clone https://github.com/asdf-vm/asdf.git ~/.asdf
+    source ~/.asdf/asdf.sh
+    cat .tool-versions | cut -d' ' -f 1 | xargs -IX asdf plugin-add X
+    asdf install
 install:
-  - ./ci jitpack
+  - |
+     mill -i $MODULE.m2
+     mkdir -p ~/.m2
+     cp -rv out/$MODULE/m2/dest/ ~/.m2/repository
