--- a/jitpack.yml
+++ b/jitpack.yml
@@ -6,6 +6,6 @@ before_install:
     asdf install
 install:
   - |
-     mill -i $MODULE.m2
+     mill -i fastparse_ext.m2
      mkdir -p ~/.m2
-     cp -rv out/$MODULE/m2/dest/ ~/.m2/repository
+     cp -rv out/fastparse_ext/m2/dest/ ~/.m2/repository
