--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,10 +21,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Asdf install
-        uses: asdf-vm/actions/install@v1.0.0
       - name: Test
-        run:  mill -i fastparse_ext.test
+        run:  ./ci test
 
   jitpack-commit:
     needs: test
