--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,11 +1,2 @@
-before_install:
-  - |
-    git clone https://github.com/asdf-vm/asdf.git ~/.asdf
-    source ~/.asdf/asdf.sh
-    cat .tool-versions | cut -d' ' -f 1 | xargs -IX asdf plugin-add X
-    asdf install
 install:
-  - |
-     mill -i fastparse_ext.m2
-     mkdir -p ~/.m2
-     cp -rv out/fastparse_ext/m2/dest/ ~/.m2/repository
+  - ./ci jitpack
